Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=index_dual_theme_schoolbell_arcade_weekly_shadow.html">
+    <meta http-equiv="refresh" content="0;url=index_clean.html">
     <link rel="canonical" href="https://brnmsmith.github.io" />
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, please follow this <a href="index_dual_theme_schoolbell_arcade_weekly_shadow.html">link to the main page</a>.</p>
+    <p>If you are not redirected automatically, please follow this <a href="index_clean.html">link to the main page</a>.</p>
 </body>
 </html>
