Update canonical link in index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="refresh" content="0;url=index_clean.html">
-    <link rel="canonical" href="https://brnmsmith.github.io" />
+    <link rel="canonical" href="https://yourusername.github.io" />
     <title>Redirecting...</title>
 </head>
 <body>
     <p>If you are not redirected automatically, please follow this <a href="index_clean.html">link to the main page</a>.</p>
 </body>
 </html>
+
